沫殇框架 登录页中英文切换 登录功能 拦截器配置

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,14 +2,16 @@
 server:
   port: 8080
 #  首页地址配置
-#  servlet:
-#    context-path: '/cjy'
+  servlet:
+    context-path: '/cjy'
 Spring:
   mvc:
     format:
       date: dd/MM/yyyy
   thymeleaf:
     cache: false
+  messages:
+    basename: 'i18n.login'
 #spring:
 #  profiles:
 #    active: test
